Добавил unit-тесты для CardRepositoryImpl и исправил несколько методов